solc_ossfuzz_seed_corpus/test_sol/test_b2a3af954cb7e6c99e51ab7b62b0e8c3bd0d7240375c0aeaf648220ffebc0769_1cc41ca112e835b3b3fa8f937244ee9f204bffae_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes8 i0)      returns(address payable o0,string memory o1){
  address payable[10] memory l0 = [payable(address(0x0000000000000000000000000000000000000002)), payable(address(0x0000000000000000000000000000000000000005)), payable(address(0x0000000000000000000000000000000000000005)), payable(address(0x0000000000000000000000000000000000000003)), payable(address(0x0000000000000000000000000000000000000006)), payable(address(0x0000000000000000000000000000000000000005)), payable(address(0x0000000000000000000000000000000000000001)), payable(address(0x0000000000000000000000000000000000000004)), payable(address(0x0000000000000000000000000000000000000005)), payable(address(0x0000000000000000000000000000000000000005))];
}
function f1()     {
  return;
}
struct St0 {
  bool el0;
}
contract C0 {
  function f2() private     returns(address o0,bool o1,St0 memory o2)  {
    for(uint solinit0 = 0; solinit0 < (uint256(54549331905808112396670885029484763445725399226423040687931696240457438866309) % 11); solinit0++)
    {
      if (false)
      {
        (o2.el0, o2.el0, o0) = (false, (((uint40(0) + ((uint240(1201845741275336591673426227401635706698879035399392364406286521987674564) <= uint240(1766847064778384329583297500742918515827483896875618958121606201292619775)) ? uint40(1099511627775) : uint40(1099511627775))) < uint40(0)) ? true : false), address(bytes20(address(0x0000000000000000000000000000000000000000))));
        assert(o2.el0 == false);
        assert(o2.el0 == (((uint40(0) + ((uint240(1201845741275336591673426227401635706698879035399392364406286521987674564) <= uint240(1766847064778384329583297500742918515827483896875618958121606201292619775)) ? uint40(1099511627775) : uint40(1099511627775))) < uint40(0)) ? true : false));
        assert(o0 == address(bytes20(address(0x0000000000000000000000000000000000000000))));
      }
      do
      {
        break;
      }
      while (true);
      do
      {
        continue;
      }
      while (false);
    }
  }
  event ev0();
  uint96   s0 = uint96(79228162514264337593543950335);
  address immutable public s1;
  bool  public s2;
  bytes19 immutable  s3 = bytes19(0xffffffffffffffffffffffffffffffffffffff);
  constructor(address i0,bool i1)   {
    s1 = (i0 = address(this));
    s2 = true;
    unchecked {
      if (i0 == address(this))
      {
        if (i0 != ((false ? true : true) ? address(this) : address(this)))
        {
          emit ev0();
          assert(false);
        }
        else if (i1)
        {
        }
      }
    }
  }
  fallback() external virtual  
  {
    if (false)
    {
      if (true)
      {
        if ((true ? false : (false ? (uint144(14120514529506436874264441313880901911237981) != uint144(7969174616984130843031756012082101066998383)) : true)))
        {
          return;
        }
        do
        {
          continue;
        }
        while (true);
      }
      if (false)
      {
      }
      else if (true)
      {
        bytes15(0x5b9784d9799ab7b4b28d5e0715756a);
        if (((false ? address(this) : address(this)) != address(bytes20(address(0x0000000000000000000000000000000000000000)))))
        {
          emit ev0();
        }
      }
    }
    else
    {
    }
  }
  function f5(bool i0,bool i1) external virtual    returns(address o0)  {
  }
}
pragma solidity >= 0.0.0;
struct St1 {
  address payable el0;
}
function f4(bool i0) pure suffix  returns(bytes8 o0)
{
  while (true)
  {
    return (bytes2(0x7adb));
  }
  if (i0)
  {
    if (i0)
    {
      if (i0)
      {
      }
      o0 ^= ((((bytes21(0xffffffffffffffffffffffffffffffffffffffffff) > bytes21(0x000000000000000000000000000000000000000000)) ? bytes8(0x9bf444ae84aa85e9) : bytes8(0x0000000000000000)) | bytes8(0x00a1b4cf62a0292d)) ^ bytes8(0x435dbeabbe513524));
    assert(i0 == address(this));
    }
  }
}

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
function f6(bool i0)    pure suffix returns(bool o0){
}
// ----
// DeclarationError 7576: (su0.sol:3796-3800): Undeclared identifier. "this" is not (or not yet) visible at this point.
